--- a/lichee-gate/pom.xml
+++ b/lichee-gate/pom.xml
@@ -17,6 +17,12 @@
             <artifactId>netty-all</artifactId>
             <version>4.0.42.Final</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.51</version>
+        </dependency>
     </dependencies>
 
 </project>
